tutorial/animals-ingress-multiple-no-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animals
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
    - host: hare.infra.hex.camp
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hare
              port:
                name: http
    - host: bear.infra.hex.camp
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bear
              port:
                name: http
    - host: moose.infra.hex.camp
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: moose
              port:
                name: http
