tutorial/animals-traefik-no-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bear
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bear.infra.hex.camp`)
      kind: Rule
      services:
        - name: bear
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hare
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hare.infra.hex.camp`)
      kind: Rule
      services:
        - name: hare
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: moose
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`moose.infra.hex.camp`)
      kind: Rule
      services:
        - name: moose
          port: 80
